--- a/周志.md
+++ b/周志.md
@@ -11,11 +11,11 @@
 ## 2017 周志
 1. 讨论实验内容
 联系老师，和老师讨论了实验内容，课程可以有两个方向，科研或者具体项目，在老师建议下用一周时间查阅资料，了解一下自己开发的方向。
-2. 第二周
+2. 初步思路
 决定使用安卓平台实现一个在线协作平台，方式是众包（用户），用户以软件工程的思想参与其中，开始构造具体业务逻辑。
-3. 第三周
+3. 主要业务逻辑
 利用文字描述和数据流图、功能模块图简单地描述了主要业务逻辑，构想了用户的一次使用过程，开始寻找具体实现方案，学习restful的思想。
-4. 第四周
+4. 完成论文
 完成项目的论文。
 5. 第五周
 6. 第六周
