--- a/周志.md
+++ b/周志.md
@@ -9,15 +9,16 @@
 第二次联系老师，决定实验内容，和大创使用同一个程序，需要开题报告、12周志、总结报告。
 
 ## 2017 周志
-1. 讨论实验内容
+### 第一周 讨论实验内容
 联系老师，和老师讨论了实验内容，课程可以有两个方向，科研或者具体项目，在老师建议下用一周时间查阅资料，了解一下自己开发的方向。
-2. 初步思路
+### 第二周 初步思路
 决定使用安卓平台实现一个在线协作平台，方式是众包（用户），用户以软件工程的思想参与其中，开始构造具体业务逻辑。
-3. 主要业务逻辑
+### 第三周 主要业务逻辑
 利用文字描述和数据流图、功能模块图简单地描述了主要业务逻辑，构想了用户的一次使用过程，开始寻找具体实现方案，学习restful的思想。
-4. 完成论文
+### 第四周 完成论文
 完成项目的论文。
-5. 第五周
+### 第五周 
+讨论了成熟度的相关计算
 6. 第六周
 7. 第七周
 8. 第八周
